--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "url": "https://github.com/digidem/mapeo-components/issues"
   },
   "homepage": "https://github.com/digidem/mapeo-components#readme",
-  "dependencies": {},
+  "dependencies": {
+    "hyperquest": "^2.1.3",
+    "pump": "^3.0.0",
+    "randombytes": "^2.0.6",
+    "react": "^16.4.1",
+    "split2": "^2.2.0",
+    "through2": "^2.0.3",
+    "xhr": "^2.5.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-env": "^1.7.0",
