--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
   },
   "homepage": "https://github.com/digidem/mapeo-components#readme",
   "dependencies": {
-    "hyperquest": "^2.1.3",
-    "pump": "^3.0.0",
-    "randombytes": "^2.0.6",
+    "mapeo-schema": "^2.0.2",
     "react": "^16.4.1",
-    "split2": "^2.2.0",
-    "through2": "^2.0.3",
-    "xhr": "^2.5.0"
+    "react-intl": "^5.8.1",
+    "utm": "^1.1.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-flow": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-plugin-react-intl-auto": "^3.3.0",
     "rimraf": "^2.6.2"
   }
 }
